...
                                                    <rect key="frame" x="24" y="20.5" width="327" height="20.5"/>
                                                    <subviews>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date of Lift" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SGx-dJ-uuq">
                                                            <rect key="frame" x="0.0" y="0.0" width="163.5" height="20.5"/>
                                                            <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="19"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Back Squat" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Wc-28-hXL">
                                                    <rect key="frame" x="151" y="19" width="200" height="22"/>
                                                    <constraints>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose Lift" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xzU-Gp-Dox">
                                                    <rect key="frame" x="24" y="19" width="119" height="22"/>
                                                    <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="19"/>
...
                                                    <rect key="frame" x="24" y="11" width="327" height="38"/>
                                                    <subviews>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose Reps" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h1O-Zl-1qE">
                                                            <rect key="frame" x="0.0" y="0.0" width="122" height="38"/>
                                                            <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="19"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Record Lift" id="npl-IQ-uHi">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="axj-vz-7at">
                            <connections>
...
                    </view>
                    <navigationItem key="navigationItem" id="qCr-VH-b6k">
                        <barButtonItem key="leftBarButtonItem" title="Sign Out" id="sjT-Ce-qJx">
                            <connections>
                                <action selector="signOutButtonTapped:" destination="Z8B-eQ-EYi" id="Fe2-Y3-3Oh"/>
...
                                <rect key="frame" x="98" y="453" width="179" height="48"/>
                                <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="35"/>
                                <state key="normal" title="Login">
                                    <color key="titleColor" red="0.93725490570000003" green="0.93725490570000003" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                <rect key="frame" x="58" y="329" width="259" height="100"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Q4M-kg-A3Q">
                                        <rect key="frame" x="0.0" y="0.0" width="259" height="30"/>
                                        <nil key="textColor"/>
...
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hbu-Yp-fxk">
                                        <rect key="frame" x="0.0" y="70" width="259" height="30"/>
                                        <nil key="textColor"/>
...
                                <rect key="frame" x="98" y="551" width="179" height="43"/>
                                <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="30"/>
                                <state key="normal" title="Sign Up">
                                    <color key="titleColor" red="0.93725490570000003" green="0.93725490570000003" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2 REP" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3PT-Tm-668">
                                                        <rect key="frame" x="0.0" y="41" width="82" height="18.5"/>
                                                        <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="18"/>
...
                                                        <nil key="highlightedColor"/>
                                                    </label>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3 REP" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jaV-3J-HyN">
                                                        <rect key="frame" x="0.0" y="41" width="82.5" height="18.5"/>
                                                        <fontDescription key="fontDescription" name="Copperplate" family="Copperplate" pointSize="18"/>
...
