...
    @IBAction func unwindToDashboardLiftList(sender: UIStoryboardSegue) {
          tableView.reloadData()
    }
    
    @IBAction func signOutButtonTapped(_ sender: Any) {

            let alert = UIAlertController(title: "Are you sure you want to logout?", message: nil, preferredStyle: .alert)
            
            alert.addAction(UIAlertAction(title: "Yes", style: .default, handler: { action in
                if Auth.auth().currentUser != nil {
                    do {
                        try Auth.auth().signOut()
                        let vc = UIStoryboard(name: "Main", bundle: nil).instantiateViewController(withIdentifier: "LoginViewController")
                        self.present(vc, animated: true, completion: nil)
                        
...
